--- a/Name_Entity_Recognition(RNN).ipynb
+++ b/Name_Entity_Recognition(RNN).ipynb
@@ -774,7 +774,7 @@
       "source": [
         "# Recognize named entities on Twitter with LSTMs\n",
         "\n",
-        "In this assignment, you will use a recurrent neural network to solve Named Entity Recognition (NER) problem. NER is a common task in natural language processing systems. It serves for extraction such entities from the text as persons, organizations, locations, etc. In this task you will experiment to recognize named entities from Twitter.\n",
+        "In this assignment,I will use a recurrent neural network to solve Named Entity Recognition (NER) problem. NER is a common task in natural language processing systems. It serves for extraction such entities from the text as persons, organizations, locations, etc. In this task you will experiment to recognize named entities from Twitter.\n",
         "\n",
         "For example, we want to extract persons' and organizations' names from the text. Than for the input text:\n",
         "\n",
@@ -788,18 +788,9 @@
         "\n",
         "A solution of the task will be based on neural networks, particularly, on Bi-Directional Long Short-Term Memory Networks (Bi-LSTMs).\n",
         "\n",
-        "### Libraries\n",
         "\n",
-        "For this task you will need the following libraries:\n",
-        " - [Tensorflow](https://www.tensorflow.org) — an open-source software library for Machine Intelligence.\n",
-        " \n",
-        "In this assignment, we use Tensorflow 1.15.0. You can install it with pip:\n",
-        "\n",
-        "    !pip install tensorflow==1.15.0\n",
-        "     \n",
-        " - [Numpy](http://www.numpy.org) — a package for scientific computing.\n",
-        " \n",
-        "If you have never worked with Tensorflow, you would probably need to read some tutorials during your work on this assignment, e.g. [this one](https://www.tensorflow.org/tutorials/recurrent) could be a good starting point. "
+        " \n"
+        
       ]
     },
     {
@@ -969,9 +960,7 @@
         "### Load the Twitter Named Entity Recognition corpus\n",
         "\n",
         "We will work with a corpus, which contains tweets with NE tags. Every line of a file contains a pair of a token (word/punctuation symbol) and a tag, separated by a whitespace. Different tweets are separated by an empty line.\n",
-        "\n",
-        "The function *read_data* reads a corpus from the *file_path* and returns two lists: one with tokens and one with the corresponding tags. You need to complete this function by adding a code, which will replace a user's nickname to `<USR>` token and any URL to `<URL>` token. You could think that a URL and a nickname are just strings which start with *http://* or *https://* in case of URLs and a *@* symbol for nicknames."
-      ]
+        "\n"      ]
     },
     {
       "cell_type": "code",
@@ -999,10 +988,7 @@
         "            token, tag = line.split()\n",
         "            # Replace all urls with <URL> token\n",
         "            # Replace all users with <USR> token\n",
-        "\n",
-        "            ######################################\n",
-        "            ######### YOUR CODE HERE #############\n",
-        "            ######################################\n",
+        "\n"
         "            if (token.startswith('@')):\n",
         "                token = '<USR>'\n",
         "            elif token.startswith('http://') or token.startswith('https://'):\n",
@@ -1156,9 +1142,7 @@
         "To train a neural network, we will use two mappings: \n",
         "- {token}$\\to${token id}: address the row in embeddings matrix for the current token;\n",
         "- {tag}$\\to${tag id}: one-hot ground truth probability distribution vectors for computing the loss at the output of the network.\n",
-        "\n",
-        "Now you need to implement the function *build_dict* which will return {token or tag}$\\to${index} and vice versa. "
-      ]
+        "\n"      ]
     },
     {
       "cell_type": "code",
@@ -1212,9 +1196,6 @@
         "                idx2tok.append(token)\n",
         "                tok2idx[token]=idx\n",
         "                idx+=1\n",
-        "    ######################################\n",
-        "    ######### YOUR CODE HERE #############\n",
-        "    ######################################\n",
         "    \n",
         "    return tok2idx, idx2tok"
       ],
@@ -1482,7 +1463,7 @@
         "    \n",
         "    # Create embedding variable (tf.Variable) with dtype tf.float32\n",
         "    initial_embedding_matrix = np.random.randn(vocabulary_size, embedding_dim) / np.sqrt(embedding_dim)\n",
-        "    embedding_matrix_variable =tf.Variable(initial_embedding_matrix,name='embedding_matrix', dtype=tf.float32) ######### YOUR CODE HERE #############\n",
+        "    embedding_matrix_variable =tf.Variable(initial_embedding_matrix,name='embedding_matrix', dtype=tf.float32) \n",
         "    \n",
         "    # Create RNN cells (for example, tf.nn.rnn_cell.BasicLSTMCell) with n_hidden_rnn number of units \n",
         "    # and dropout (tf.nn.rnn_cell.DropoutWrapper), initializing all *_keep_prob with dropout placeholder.\n",
@@ -1491,16 +1472,16 @@
         "        input_keep_prob=self.dropout_ph,\n",
         "        output_keep_prob =self.dropout_ph,\n",
         "        state_keep_prob =self.dropout_ph)\n",
-        "                       ######### YOUR CODE HERE #############\n",
+        "                       \n",
         "    backward_cell = tf.nn.rnn_cell.DropoutWrapper(\n",
         "        tf.nn.rnn_cell.BasicLSTMCell(num_units=n_hidden_rnn, forget_bias=3),\n",
         "        input_keep_prob=self.dropout_ph,\n",
         "        output_keep_prob =self.dropout_ph,\n",
-        "        state_keep_prob =self.dropout_ph) ######### YOUR CODE HERE #############\n",
+        "        state_keep_prob =self.dropout_ph) \n",
         "\n",
         "    # Look up embeddings for self.input_batch (tf.nn.embedding_lookup).\n",
         "    # Shape: [batch_size, sequence_len, embedding_dim].\n",
-        "    embeddings = tf.nn.embedding_lookup(embedding_matrix_variable, self.input_batch)  ######### YOUR CODE HERE #############\n",
+        "    embeddings = tf.nn.embedding_lookup(embedding_matrix_variable, self.input_batch)  \n",
         "    \n",
         "    # Pass them through Bidirectional Dynamic RNN (tf.nn.bidirectional_dynamic_rnn).\n",
         "    # Shape: [batch_size, sequence_len, 2 * n_hidden_rnn]. \n",
@@ -1510,7 +1491,7 @@
         "        dtype=tf.float32,\n",
         "        inputs=embeddings,\n",
         "        sequence_length=self.lengths\n",
-        "    ) ######### YOUR CODE HERE #############\n",
+        "    ) \n",
         "    rnn_output = tf.concat([rnn_output_fw, rnn_output_bw], axis=2)\n",
         "\n",
         "    # Dense layer on top.\n",
@@ -1555,12 +1536,12 @@
         "    \"\"\"Transforms logits to probabilities and finds the most probable tags.\"\"\"\n",
         "    \n",
         "    # Create softmax (tf.nn.softmax) function\n",
-        "    softmax_output =tf.nn.softmax(self.logits) ######### YOUR CODE HERE #############\n",
+        "    softmax_output =tf.nn.softmax(self.logits) \n",
         "    \n",
         "    # Use argmax (tf.argmax) to get the most probable tags\n",
         "    # Don't forget to set axis=-1\n",
         "    # otherwise argmax will be calculated in a wrong way\n",
-        "    self.predictions = tf.argmax(softmax_output, axis=-1)   ######### YOUR CODE HERE #############"
+        "    self.predictions = tf.argmax(softmax_output, axis=-1)  "
       ],
       "execution_count": null,
       "outputs": []
@@ -1603,13 +1584,13 @@
         "    \n",
         "    # Create cross entropy function function (tf.nn.softmax_cross_entropy_with_logits_v2)\n",
         "    ground_truth_tags_one_hot = tf.one_hot(self.ground_truth_tags, n_tags)\n",
-        "    loss_tensor = tf.nn.softmax_cross_entropy_with_logits_v2(labels=ground_truth_tags_one_hot, logits=self.logits)                     ######### YOUR CODE HERE #############\n",
+        "    loss_tensor = tf.nn.softmax_cross_entropy_with_logits_v2(labels=ground_truth_tags_one_hot, logits=self.logits)                     \n",
         "    \n",
         "    mask = tf.cast(tf.not_equal(self.input_batch, PAD_index), tf.float32)\n",
         "    # Create loss function which doesn't operate with <PAD> tokens (tf.reduce_mean)\n",
         "    # Be careful that the argument of tf.reduce_mean should be\n",
         "    # multiplication of mask and loss_tensor.\n",
-        "    self.loss =tf.reduce_mean(tf.reduce_sum(tf.multiply(mask, loss_tensor), axis=-1))  ######### YOUR CODE HERE #############"
+        "    self.loss =tf.reduce_mean(tf.reduce_sum(tf.multiply(mask, loss_tensor), axis=-1))  "
       ],
       "execution_count": null,
       "outputs": []
@@ -1635,8 +1616,8 @@
       },
       "source": [
         "The last thing to specify is how we want to optimize the loss. \n",
-        "We suggest that you use [Adam](https://www.tensorflow.org/api_docs/python/tf/train/AdamOptimizer) optimizer with a learning rate from the corresponding placeholder. \n",
-        "You will also need to apply clipping to eliminate exploding gradients. It can be easily done with [clip_by_norm](https://www.tensorflow.org/api_docs/python/tf/clip_by_norm) function. "
+        "\n",
+        "We will also need to apply clipping to eliminate exploding gradients. It can be easily done with [clip_by_norm](https://www.tensorflow.org/api_docs/python/tf/clip_by_norm) function. "
       ]
     },
     {
@@ -1651,7 +1632,7 @@
         "    \"\"\"Specifies the optimizer and train_op for the model.\"\"\"\n",
         "    \n",
         "    # Create an optimizer (tf.train.AdamOptimizer)\n",
-        "    self.optimizer = tf.train.AdamOptimizer(self.learning_rate_ph) ######### YOUR CODE HERE #############\n",
+        "    self.optimizer = tf.train.AdamOptimizer(self.learning_rate_ph) \n",
         "    self.grads_and_vars = self.optimizer.compute_gradients(self.loss)\n",
         "    \n",
         "    # Gradient clipping (tf.clip_by_norm) for self.grads_and_vars\n",
@@ -1659,7 +1640,7 @@
         "    # because self.grads_and_vars also contains variables.\n",
         "    # list comprehension might be useful in this case.\n",
         "    clip_norm = tf.cast(1.0, tf.float32)\n",
-        "    self.grads_and_vars =[(tf.clip_by_norm(grad, clip_norm),var) for grad, var in self.grads_and_vars ]  ######### YOUR CODE HERE #############\n",
+        "    self.grads_and_vars =[(tf.clip_by_norm(grad, clip_norm),var) for grad, var in self.grads_and_vars ]  \n",
         "    \n",
         "    self.train_op = self.optimizer.apply_gradients(self.grads_and_vars)"
       ],
@@ -1687,7 +1668,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Congratulations! You have specified all the parts of your network. You may have noticed, that we didn't deal with any real data yet, so what you have written is just recipes on how the network should function.\n",
+        " We have specified all the parts of our network. You may have noticed, that we didn't deal with any real data yet, so what we have written is just recipes on how the network should function.\n",
         "Now we will put them to the constructor of our Bi-LSTM class to use it in the next section. "
       ]
     },
@@ -1795,9 +1776,6 @@
       },
       "source": [
         "def predict_for_batch(self, session, x_batch, lengths):\n",
-        "    ######################################\n",
-        "    ######### YOUR CODE HERE #############\n",
-        "    ######################################\n",
         "    feed_dict= {\n",
         "        self.input_batch: x_batch,\n",
         "        self.lengths: lengths\n",
@@ -1931,9 +1909,7 @@
         "- starting value of *learning_rate*: 0.005\n",
         "- *learning_rate_decay*: a square root of 2;\n",
         "- *dropout_keep_probability*: try several values: 0.1, 0.5, 0.9.\n",
-        "\n",
-        "However, feel free to conduct more experiments to tune hyperparameters and earn extra points for the assignment."
-      ]
+        "\n"      ]
     },
     {
       "cell_type": "code",
@@ -1974,13 +1950,13 @@
       "source": [
         "tf.reset_default_graph()\n",
         "\n",
-        "model = BiLSTMModel(vocabulary_size, n_tags, 200, 200 , token2idx['<PAD>'])            ######### YOUR CODE HERE #############\n",
+        "model = BiLSTMModel(vocabulary_size, n_tags, 200, 200 , token2idx['<PAD>'])           \n",
         "\n",
-        "batch_size = 32######### YOUR CODE HERE #############\n",
-        "n_epochs = 4 ######### YOUR CODE HERE #############\n",
-        "learning_rate = 0.005 ######### YOUR CODE HERE #############\n",
-        "learning_rate_decay = 1.414 ######### YOUR CODE HERE #############\n",
-        "dropout_keep_probability = 0.5 ######### YOUR CODE HERE #############"
+        "batch_size = 32\n",
+        "n_epochs = 4\n",
+        "learning_rate = 0.005 \n",
+        "learning_rate_decay = 1.414 \n",
+        "dropout_keep_probability = 0.5 "
       ],
       "execution_count": null,
       "outputs": []
@@ -2116,10 +2092,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Now let us see full quality reports for the final model on train, validation, and test sets. To give you a hint whether you have implemented everything correctly, you might expect F-score about 40% on the validation set.\n",
-        "\n",
-        "**The output of the cell below (as well as the output of all the other cells) should be present in the notebook for peer2peer review!**"
-      ]
+        "Now let us see full quality reports for the final model on train, validation, and test sets. To give you a hint whether we have implemented everything correctly, you might expect F-score about 40% on the validation set.\n",
+        "\n"      ]
     },
     {
       "cell_type": "code",
@@ -2137,10 +2111,10 @@
         "train_results = eval_conll(model, sess, train_tokens, train_tags, short_report=False)\n",
         "\n",
         "print('-' * 20 + ' Validation set quality: ' + '-' * 20)\n",
-        "validation_results =eval_conll(model, sess, validation_tokens, validation_tags, short_report=False) ######### YOUR CODE HERE #############\n",
+        "validation_results =eval_conll(model, sess, validation_tokens, validation_tags, short_report=False) \n",
         "\n",
         "print('-' * 20 + ' Test set quality: ' + '-' * 20)\n",
-        "test_results =eval_conll(model, sess, test_tokens, test_tags, short_report=False) ######### YOUR CODE HERE #############"
+        "test_results =eval_conll(model, sess, test_tokens, test_tags, short_report=False) "
       ],
       "execution_count": null,
       "outputs": [
@@ -2236,7 +2210,7 @@
       "source": [
         "### Conclusions\n",
         "\n",
-        "Could we say that our model is state of the art and the results are acceptable for the task? Definately, we can say so. Nowadays, Bi-LSTM is one of the state of the art approaches for solving NER problem and it outperforms other classical methods. Despite the fact that we used small training corpora (in comparison with usual sizes of corpora in Deep Learning), our results are quite good. In addition, in this task there are many possible named entities and for some of them we have only several dozens of trainig examples, which is definately small. However, the implemented model outperforms classical CRFs for this task. Even better results could be obtained by some combinations of several types of methods, e.g. see [this](https://arxiv.org/abs/1603.01354) paper if you are interested."
+        "Could we say that our model is state of the art and the results are acceptable for the task? Definately, we can say so. Nowadays, Bi-LSTM is one of the state of the art approaches for solving NER problem and it outperforms other classical methods. Despite the fact that we used small training corpora (in comparison with usual sizes of corpora in Deep Learning), our results are quite good. In addition, in this task there are many possible named entities and for some of them we have only several dozens of trainig examples, which is definately small. However, the implemented model outperforms classical CRFs for this task. Even better results could be obtained by some combinations of several types of methods."
       ]
     }
   ]
